--- a/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
+++ b/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
@@ -33,7 +33,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"/>
 
-    <EditText
+    <TextView
         android:id="@+id/company_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
-    <EditText
+    <TextView
         android:id="@+id/company_type"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -92,19 +92,27 @@
         android:layout_marginLeft="15dp"
         app:layout_constraintTop_toBottomOf="@id/line" />
 
-    <EditText
+    <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:inputType="textMultiLine"
         android:text="TextView"
         android:ellipsize="end"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:textColor="@color/proxi_button_purple"
-        app:layout_constraintTop_toBottomOf="@id/descriptionT"/>
+        app:layout_constraintTop_toBottomOf="@id/descriptionT"
+        android:overScrollMode="always"
+        android:scrollbarStyle="insideInset"
+        android:scrollbars="vertical"
+        android:maxLines="1"
+        android:isScrollContainer="true"
+        android:inputType="textMultiLine"
+        android:enabled="true"
+        android:minLines="1"
+        android:focusable="true"/>
 
     <TextView
         android:id="@+id/informationsT"
@@ -133,7 +141,7 @@
         app:layout_constraintTop_toBottomOf="@id/informationsT"
         app:layout_constraintBottom_toTopOf="@id/nb_telephoneT"/>
 
-    <EditText
+    <TextView
         android:id="@+id/nb_siret"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -141,6 +149,7 @@
         android:fontFamily="@font/avenirltstd_medium"
         android:inputType="number"
         android:text="TextView"
+        android:textSize="18sp"
         android:textAlignment="center"
         android:layout_marginLeft="100dp"
         android:textColor="@color/proxi_button_purple"
@@ -163,7 +172,7 @@
         app:layout_constraintTop_toBottomOf="@id/emailT"
         app:layout_constraintBottom_toTopOf="@id/nb_siretT"/>
 
-    <EditText
+    <TextView
         android:id="@+id/nb_telephone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -171,6 +180,7 @@
         android:fontFamily="@font/avenirltstd_medium"
         android:inputType="phone"
         android:text="TextView"
+        android:textSize="18sp"
         android:layout_marginLeft="100dp"
         android:textColor="@color/proxi_button_purple"
         app:layout_constraintLeft_toRightOf="parent"
@@ -192,7 +202,7 @@
         app:layout_constraintTop_toBottomOf="@id/nb_telephoneT"
         app:layout_constraintBottom_toTopOf="@id/adresseT"/>
 
-    <EditText
+    <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -200,6 +210,8 @@
         android:fontFamily="@font/avenirltstd_medium"
         android:inputType="textEmailAddress"
         android:text="TextView"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="18sp"
         android:textAlignment="center"
         android:layout_marginLeft="100dp"
         app:layout_constraintLeft_toRightOf="parent"
@@ -222,13 +234,14 @@
         app:layout_constraintBottom_toTopOf="@id/emailT"
         app:layout_constraintTop_toBottomOf="@id/edit"/>
 
-    <EditText
+    <TextView
         android:id="@+id/adresse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
         android:text="TextView"
+        android:textSize="18sp"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="100dp"
@@ -253,5 +266,55 @@
         android:layout_marginTop="7dp"
         app:layout_constraintTop_toBottomOf="@id/adresseT"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="invisible"/>
+
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/menu"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/adresseT"
+        app:menu_colorNormal="@color/proxi_button_purple"
+        app:menu_colorPressed="@color/proxi_button_purple"
+        app:menu_colorRipple="@color/proxi_button_purple"
+        app:menu_shadowColor="@color/proxi_button_purple">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/avenirltstd_medium"
+            android:src="@drawable/exit"
+            app:fab_colorNormal="@color/proxi_button_purple"
+            app:fab_colorPressed="@color/proxi_button_purple"
+            app:fab_colorRipple="@color/proxi_button_purple"
+            app:fab_label="Se déconnecter"
+            app:fab_shadowColor="@color/proxi_button_purple"
+            app:fab_size="mini"
+            app:layout_constraintTop_toBottomOf="@id/adresseT" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            app:layout_constraintTop_toBottomOf="@id/adresseT"
+            android:layout_marginTop="7dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:src="@drawable/reload"
+            android:fontFamily="@font/avenirltstd_medium"
+            app:fab_label="Modifier"
+            app:fab_size="mini"
+            app:fab_colorRipple="@color/proxi_button_purple"
+            app:fab_shadowColor="@color/proxi_button_purple"
+            app:fab_colorPressed="@color/proxi_button_purple"
+            app:fab_colorNormal="@color/proxi_button_purple"
+            />
+    </com.github.clans.fab.FloatingActionMenu>
+
 </android.support.constraint.ConstraintLayout>
