--- a/ProxiJob/app/src/main/res/layout/activity_informations_client.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_informations_client.xml
@@ -54,7 +54,7 @@
         android:textColor="@color/proxi_purple_light"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="15dp"
         app:layout_constraintTop_toBottomOf="@id/line" />
 
@@ -99,6 +99,7 @@
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:textSize="20sp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="15dp"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailT"
@@ -128,6 +129,7 @@
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:textSize="20sp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="15dp"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/firstnameT"
@@ -158,6 +160,7 @@
         android:layout_marginBottom="10dp"
         android:textColor="@color/proxi_button_purple"
         android:textSize="20sp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="15dp"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/nb_secuT"
@@ -213,15 +216,16 @@
         android:id="@+id/birthdayT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
         android:fontFamily="@font/avenirltstd_medium"
         android:text="Date de Naissance"
         android:textAlignment="center"
+        android:layout_marginTop="10dp"
         android:textColor="@color/proxi_button_purple"
         android:textSize="20sp"
-        android:layout_marginLeft="15dp"
+        app:layout_constraintBottom_toTopOf="@id/telephoneT"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nb_secuT"
-        app:layout_constraintBottom_toTopOf="@id/telephoneT"/>
+        app:layout_constraintTop_toBottomOf="@id/nb_secuT" />
 
     <EditText
         android:id="@+id/birthday"
@@ -235,8 +239,8 @@
         android:layout_marginLeft="100dp"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/telephoneT"
-        app:layout_constraintBottom_toTopOf="@id/nb_secuT"/>
+        app:layout_constraintTop_toBottomOf="@id/nb_secuT"
+        app:layout_constraintBottom_toTopOf="@id/telephoneT"/>
 
     <TextView
         android:id="@+id/telephoneT"
@@ -264,8 +268,8 @@
         android:layout_marginLeft="100dp"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit"
-        app:layout_constraintBottom_toTopOf="@id/birthdayT"/>
+        app:layout_constraintTop_toBottomOf="@id/birthdayT"
+        app:layout_constraintBottom_toTopOf="@id/edit"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/edit"
@@ -279,8 +283,57 @@
         android:textAllCaps="true"
         android:textColor="@color/colorWhite"
         android:textSize="15dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@id/edit"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="invisible"/>
+
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/menu"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/telephoneT"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:menu_colorNormal="@color/proxi_button_purple"
+        app:menu_colorPressed="@color/proxi_button_purple"
+        app:menu_colorRipple="@color/proxi_button_purple"
+        app:menu_shadowColor="@color/proxi_button_purple">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/exit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/avenirltstd_medium"
+            android:src="@drawable/exit"
+            app:fab_colorNormal="@color/proxi_button_purple"
+            app:fab_colorPressed="@color/proxi_button_purple"
+            app:fab_colorRipple="@color/proxi_button_purple"
+            app:fab_label="Se déconnecter"
+            app:fab_shadowColor="@color/proxi_button_purple"
+            app:fab_size="mini"
+            app:layout_constraintTop_toBottomOf="@id/telephoneT" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            app:layout_constraintTop_toBottomOf="@id/telephoneT"
+            android:layout_marginTop="7dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:src="@drawable/reload"
+            android:fontFamily="@font/avenirltstd_medium"
+            app:fab_label="Modifier"
+            app:fab_size="mini"
+            app:fab_colorRipple="@color/proxi_button_purple"
+            app:fab_shadowColor="@color/proxi_button_purple"
+            app:fab_colorPressed="@color/proxi_button_purple"
+            app:fab_colorNormal="@color/proxi_button_purple"
+            />
+    </com.github.clans.fab.FloatingActionMenu>
 </android.support.constraint.ConstraintLayout>
