--- a/ProxiJob/app/src/main/res/layout/activity_information_client_for_company.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_information_client_for_company.xml
@@ -70,10 +70,9 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/informationsT"
-        app:layout_constraintBottom_toTopOf="@id/nb_telephoneT"/>
+        app:layout_constraintTop_toBottomOf="@id/informationsT"/>
 
-    <EditText
+    <TextView
         android:id="@+id/lastname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,14 +80,14 @@
         android:fontFamily="@font/avenirltstd_medium"
         android:inputType="number"
         android:text="TextView"
+        android:textSize="20sp"
         android:textAlignment="center"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="10dp"
         android:textColor="@color/proxi_button_purple"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/informationsT"
-        app:layout_constraintBottom_toTopOf="@id/nb_telephone"/>
+        app:layout_constraintTop_toBottomOf="@id/informationsT"/>
 
     <TextView
         android:id="@+id/firstnameT"
@@ -100,11 +99,11 @@
         android:textColor="@color/proxi_button_purple"
         android:textSize="20sp"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailT"
-        app:layout_constraintBottom_toTopOf="@id/lastnameT"/>
+        app:layout_constraintTop_toBottomOf="@id/lastnameT"/>
 
-    <EditText
+    <TextView
         android:id="@+id/firstname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -113,132 +112,33 @@
         android:inputType="phone"
         android:text="TextView"
         android:layout_marginLeft="100dp"
-        android:textColor="@color/proxi_button_purple"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lastname"
-        app:layout_constraintBottom_toTopOf="@id/email"/>
-
-    <TextView
-        android:id="@+id/emailT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:text="Email"
-        android:textAlignment="center"
-        android:textColor="@color/proxi_button_purple"
+        android:layout_marginTop="20dp"
         android:textSize="20sp"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/firstnameT"
-        app:layout_constraintBottom_toTopOf="@id/adresseT"/>
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:inputType="textEmailAddress"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:layout_marginLeft="100dp"
+        android:textColor="@color/proxi_button_purple"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/firstnameT"
-        app:layout_constraintBottom_toTopOf="@id/adresseT"/>
+        app:layout_constraintTop_toBottomOf="@id/lastnameT"/>
 
-    <TextView
-        android:id="@+id/adresseT"
+
+    <Button
+        android:id="@+id/edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:text="Adresse"
-        android:textAlignment="center"
-        android:layout_marginBottom="10dp"
-        android:textColor="@color/proxi_button_purple"
-        android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/nb_secuT"
-        app:layout_constraintTop_toBottomOf="@id/emailT"/>
-
-    <TextView
-        android:id="@+id/adresse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="100dp"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailT"
-        app:layout_constraintBottom_toTopOf="@id/nb_secuT"/>
-
-    <TextView
-        android:id="@+id/birthdayT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:text="Date de Naissance"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/proxi_button_purple"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/telephoneT"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nb_secuT" />
-
-    <EditText
-        android:id="@+id/birthday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="100dp"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nb_secuT"
-        app:layout_constraintBottom_toTopOf="@id/telephoneT"/>
-
-    <TextView
-        android:id="@+id/telephoneT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:text="N° Téléphone"
-        android:textAlignment="center"
-        android:textColor="@color/proxi_button_purple"
-        android:textSize="20sp"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/birthdayT"
-        app:layout_constraintTop_toBottomOf="@id/menu"/>
-
-    <EditText
-        android:id="@+id/telephone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="100dp"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/menu"
-        app:layout_constraintBottom_toTopOf="@id/birthdayT"/>
-
-
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@color/proxi_button_purple"
+        android:src="@drawable/plus"
+        android:text="Voir les recomandations"
+        android:textAllCaps="true"
+        android:textColor="@color/colorWhite"
+        android:textSize="15dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@id/edit"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
