--- a/ProxiJob/app/src/main/res/layout/activity_information_client_for_company.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_information_client_for_company.xml
@@ -18,7 +18,8 @@
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
@@ -134,8 +135,8 @@
         android:textSize="15dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@id/edit"
+        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toTopOf="@id/firstname"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
