--- a/ProxiJob/app/src/main/res/layout/activity_information_client_for_company.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_information_client_for_company.xml
@@ -135,10 +135,8 @@
         android:textSize="15dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintBottom_toTopOf="@id/firstname"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/firstnameT"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
