--- a/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
+++ b/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
@@ -277,6 +277,7 @@
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
         app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/adresseT"
